Move metadata parser to JAppMetadata